--- a/src/app/pages/employee/employee.html
+++ b/src/app/pages/employee/employee.html
@@ -30,14 +30,11 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <!-- <li>
-                                <a ng-click="userPassword()">Password</a>
-                            </li> -->
                             <li>
-                                <a ng-click="setPassword()">Password</a>
+                                <a ng-click="setPassword()" href="">Password</a>
                             </li>
                             <li ng-if="userResultData!='NoDataFound'">
-                                <a ng-click="userRole()">Role</a>
+                                <a ng-click="userRole()" href="">Role</a>
                             </li>
                             <!-- <li>
                                 <a >Login Disabled</a>
