--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -208,7 +208,7 @@
             <div class="panel pnl300">
                 <div class="panel-heading header">
                     <i class="fa fa-user-plus iconsize"></i>
-                    &nbsp; &nbsp;&nbsp; &nbsp;
+                    &nbsp; 
                     NEW JOINEES
                     <a ng-if="newJoins.length>0" class="pull-right" data-ng-click="newListJoins()" href="">View All</a>
                 </div>
@@ -247,7 +247,7 @@
                                 <div class="profile-picture  ng-isolate-scope">
                                     <div random-Color class="img-circle img-initials " data-ng-style="{'background-color':getRandomColor(index)}"
                                         style="background-color: rgb(158, 105, 175);">
-                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split('')[1].substr(0,1)}}
+                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split(' ')[1].substr(0,1)}}
                                     </div>
                                 </div>
                             </div>
@@ -290,7 +290,7 @@
             <div class="panel pnl300">
                 <div class="panel-heading header">
                     <i class="fa fa-birthday-cake iconsize"></i>
-                    &nbsp; &nbsp;&nbsp; &nbsp; BIRTHDAYS
+                    &nbsp;  BIRTHDAYS
                     <a ng-if="birthAnnList.length>0" class="pull-right" data-ng-click="birthDay()" href="">View All</a>
                 </div>
                 <div class="panel-body">
@@ -315,7 +315,7 @@
                                 <div class="profile-picture  ng-isolate-scope">
                                     <div random-Color class="img-circle img-initials " data-ng-style="{'background-color':getRandomColor(index)}"
                                         style="background-color: rgb(158, 105, 175);">
-                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split('')[1].substr(0,1)}}
+                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split(' ')[1].substr(0,1)}}
                                     </div>
                                 </div>
                             </div>
@@ -338,7 +338,7 @@
             <div class="panel pnl300">
                 <div class="panel-heading header">
                     <i class="fa fa-user-times iconsize"></i>
-                    &nbsp; &nbsp;&nbsp; &nbsp;
+                    &nbsp; 
                     LEAVING EMPLOYEES
                     <a ng-if="leavingEmps.length>0" class="pull-right" data-ng-click="hasLeft()" href="">View All</a>
                 </div>
@@ -361,7 +361,7 @@
                                 <div class="profile-picture  ng-isolate-scope">
                                     <div random-Color class="img-circle img-initials " data-ng-style="{'background-color':getRandomColor(index)}"
                                         style="background-color: rgb(158, 105, 175);">
-                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split('')[1].substr(0,1)}}
+                                        {{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split(' ')[1].substr(0,1)}}
                                     </div>
                                 </div>
                             </div>
